// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts an array 1`] = `".1cuivxf{text-decoration-line:overline underline}"`;

exports[`converts fontSize pixels 1`] = `".1b31bl0{font-size:0.875rem}"`;

exports[`converts to pixels 1`] = `".64zslz{padding-left:2px}"`;

exports[`does not converts to pixels 1`] = `".1w3b0fg{opacity:1}"`;

exports[`does not override longhand 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    paddingTop: \\"1qnkkus\\",
    paddingRight: \\"1ppz12y\\",
    paddingBottom: \\"1bi0y1l\\",
    paddingLeft: \\"n18c4x\\"
  }
};
\\"1qnkkus \\" + (\\"1ppz12y \\" + (\\"1bi0y1l \\" + \\"n18c4x \\"));"
`;

exports[`does not override longhand 2`] = `".1bi0y1l{padding-bottom:1rem}.1ppz12y{padding-right:1rem}.1qnkkus{padding-top:1rem}.n18c4x{padding-left:2rem}"`;

exports[`expands shorthand 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    paddingTop: \\"1qnkkus\\",
    paddingRight: \\"1ppz12y\\",
    paddingBottom: \\"1bi0y1l\\",
    paddingLeft: \\"1rli1r6\\"
  }
};
\\"1qnkkus \\" + (\\"1ppz12y \\" + (\\"1bi0y1l \\" + \\"1rli1r6 \\"));"
`;

exports[`expands shorthand 2`] = `".1bi0y1l{padding-bottom:1rem}.1ppz12y{padding-right:1rem}.1qnkkus{padding-top:1rem}.1rli1r6{padding-left:1rem}"`;

exports[`supports arrow function 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"du2tfg\\"
  }
};

const get = state => state ? \\"du2tfg \\" : \\"\\";"
`;

exports[`supports arrow function 2`] = `".du2tfg{color:blue}"`;

exports[`supports constants 1`] = `".du2tfg{color:blue}"`;
